--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-wechat": "~4.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "qcloudsms/qcloudsms_php": "0.1.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
