--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "overtrue/laravel-wechat": "~4.0",
+        "php-amqplib/php-amqplib": "^2.7",
         "predis/predis": "^1.1",
         "qcloudsms/qcloudsms_php": "0.1.*"
     },
