--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "^1.0",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
-        "qcloudsms/qcloudsms_php": "0.1.*"
+        "qcloudsms/qcloudsms_php": "0.1.*",
+        "sentry/sentry-laravel": "^0.9.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
